# webmcp-lint

./: .pre-commit-hooks.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  mirror.yml
docs/: rules.md
examples/: example-manifest.json
tests/: _helpers.py  test_corpus.py  test_docs.py  test_engine.py  test_rules.py
tests/corpus/benign/: fetch-with-hint.json  multi-tool.json  read-tool.json  write-tool.json
tests/corpus/malicious/: combo-attack.json  exec-capability.json  prompt-injection.json  untrusted-content-html.json
webmcp_lint/: __init__.py  cli.py  discovery.py  finding.py  grade.py  manifest.py  report.py  scanner.py
webmcp_lint/rules/: __init__.py  _util.py  exec_capability.py  hygiene.py  injection.py  readonly.py  risky_params.py  schema.py  unicode_smuggling.py  untrusted_content.py
